# ml-topics-w2026

./: README.md
01-chatbot/frontend/: README.md  package-lock.json  package.json
01-chatbot/frontend/app/: globals.css  layout.tsx  page.tsx
01-chatbot/frontend/app/api/chat/: route.ts  tools.ts
01-chatbot/frontend/app/api/chat/tool-handlers/: extractSentences.ts  getGutenbergText.ts  index.ts  searchBooks.ts  sentimentAnalysis.ts
01-chatbot/frontend/app/components/: Chart.tsx
02-similarity/codespace/: .gitignore  app.py  main.py  pyproject.toml
02-similarity/codespace/data/Picasso/: Picasso_embeddings.json
02-similarity/codespace/data/Plato/: TheRepublic.txt
02-similarity/codespace/data/VanGogh/: VanGogh_embeddings.json
02-similarity/codespace/examples/: visualize.py
02-similarity/codespace/scripts/: chunk_text.py  embed_picasso.py  embed_vangogh.py
02-similarity/codespace/src/: dataloader.py  embeddings.py  metrics.py
02-similarity/codespace/templates/: index.html
03-geo/geo-qa/: README.md  app.py  cities_gdp.csv  olmoearth_inference.py  olmoearth_wikipedia.py  parse_cities_gdp.py  pyproject.toml  requirements.txt  run.py
03-geo/geo-qa/data/: embeddings.json
03-geo/geo-qa/templates/: attention_leaderboard.html  attention_vote.html  base.html  dashboard.html  index.html  leaderboard.html  vote.html
